syntax = "proto3";

package cafm.identity.access_node;

message AccessNodeData {
  string contentType = 1;
  string context = 2;
  string content = 3;
}

message AccessNode {
  AccessNodeData data = 1;
  repeated AccessNode children = 2;
}