syntax = "proto3";

package cafm.identity.realm;

import "identity/realm.proto";
import "order.proto";

message RealmAppService_realmByNameRequest {
  string name = 1;
}

message RealmAppService_realmByNameResponse {
  Realm realm = 1;
}

message RealmAppService_realmByIdRequest {
  string id = 1;
}

message RealmAppService_realmByIdResponse {
  Realm realm = 1;
}

message RealmAppService_realmsRequest {
  int32 resultFrom = 1;
  int32 resultSize = 2;
  repeated cafm.common.order.Order order = 3;
}

message RealmAppService_realmsResponse {
  repeated Realm realms = 1;
  int32 totalItemCount = 2;
}

message RealmAppService_newIdRequest {}

message RealmAppService_newIdResponse {
  string id = 1;
}

service RealmAppService {
  rpc realmByName (RealmAppService_realmByNameRequest) returns (RealmAppService_realmByNameResponse) {}
  rpc realmById (RealmAppService_realmByIdRequest) returns (RealmAppService_realmByIdResponse) {}
  rpc realms (RealmAppService_realmsRequest) returns (RealmAppService_realmsResponse) {}
  rpc newId (RealmAppService_newIdRequest) returns (RealmAppService_newIdResponse) {}  
}