syntax = "proto3";

package cafm.identity.role;

import "role.proto";
import "permission_with_permission_contexts.proto";
import "resource.proto";
import "access_node.proto";

message RoleAccessPermission {
  Role role = 1;
  repeated permission.PermissionWithPermissionContexts permissionWithPermissionContexts = 2;
  resource.Resource ownedBy = 3;
  repeated resource.Resource ownerOf = 4;
  repeated access_node.AccessNode accessTree = 5;
}